force-app/main/default/objects/Liabilities__c/Liabilities__c.object-meta.xml
<CustomObject>
    <label>Liabilities</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>