force-app/main/default/objects/Liabilities__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <inlineHelpText>Visible on portal.</inlineHelpText>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>