force-app/main/default/objects/Liabilities__c/fields/End_Year__c.field-meta.xml
<CustomField>
    <fullName>End_Year__c</fullName>
    <inlineHelpText>If the date is not know use 01/01/YYYY. VISIBLE IN PORTAL</inlineHelpText>
    <label>End Date/Year</label>
    <type>Date</type>
</CustomField>