force-app/main/default/objects/Liabilities__c/fields/Initial_Balance__c.field-meta.xml
<CustomField>
    <fullName>Initial_Balance__c</fullName>
    <inlineHelpText>The original balance when the debt was taken out. VISIBLE IN PORTAL</inlineHelpText>
    <label>Initial Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>