force-app/main/default/objects/Liabilities__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <inlineHelpText>If the date is not know use 01/01/YYYY. VISIBLE IN PORTAL</inlineHelpText>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>