force-app/main/default/objects/Liabilities__c/fields/LinkedAsset__c.field-meta.xml
<CustomField>
    <fullName>LinkedAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to CheerIO asset</description>
    <label>Linked Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Liabilities</relationshipLabel>
    <relationshipName>LegacyLiabilities</relationshipName>
    <type>Lookup</type>
</CustomField>