force-app/main/default/objects/Liabilities__c/fields/OW_validation_status__c.field-meta.xml
<CustomField>
    <fullName>OW_validation_status__c</fullName>
    <description>Displays to users whether there is an outstanding validation on the employment record based on the status of the latest update.</description>
    <formula>IF( ISBLANK( OW_latest_update__c ), &quot;ERROR: no update linked&quot;, IF( ISPICKVAL( OW_latest_update__r.Validated__c, &quot;&quot; ), &quot;Validation pending&quot;, &quot;Validated&quot; ))</formula>
    <inlineHelpText>Tells you if there is an outstanding validation on this employment.</inlineHelpText>
    <label>Validation status</label>
    <type>Text</type>
</CustomField>