force-app/main/default/objects/Liabilities__c/fields/Paid_off_in_full_each_month__c.field-meta.xml
<CustomField>
    <fullName>Paid_off_in_full_each_month__c</fullName>
    <inlineHelpText>For Credit cards</inlineHelpText>
    <label>Paid off in full each month?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>