force-app/main/default/objects/Liabilities__c/recordTypes/Mortgage.recordType-meta.xml
<RecordType>
    <fullName>Mortgage</fullName>
    <active>true</active>
    <label>Mortgage</label>
</RecordType>