force-app/main/default/objects/Liabilities__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Public_provider_list__c</columns>
    <columns>Household__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Household__c</field>
        <operation>contains</operation>
        <value>Jones</value>
    </filters>
    <label>All</label>
</ListView>